fix grid on mobile

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -326,3 +326,11 @@ h6 {
         color: rgba($active-color, 0.8);
     }
 }
+
+@include media-breakpoint-down(lg) {
+    
+        .row > * {
+            margin-left: 0;
+        }
+    
+}
